--- a/control
+++ b/control
@@ -1,8 +1,8 @@
-Package: com.haxi0.roothidepatcher
+Package: com.roothide.patcher
 Name: RootHide Patcher
 Version: 0.1
 Architecture: iphoneos-arm64e
-Depends: firmware (>= 15.0)
+Depends: firmware (>= 15.0), odcctools, ldid, file, dpkg
 Description: patch rootless package to roothide, not work for all packages.
 Maintainer: RootHide
 Author: haxi0
