--- a/control
+++ b/control
@@ -1,8 +1,8 @@
 Package: com.roothide.patcher
 Name: RootHide Patcher
-Version: 0.1
+Version: 0.3
 Architecture: iphoneos-arm64e
-Depends: firmware (>= 15.0), odcctools, ldid, file, dpkg
+Depends: firmware (>= 15.0), odcctools, ldid, file, dpkg, gawk
 Description: patch rootless package to roothide, not work for all packages.
 Maintainer: RootHide
 Author: haxi0
