--- a/control
+++ b/control
@@ -1,8 +1,8 @@
 Package: com.roothide.patcher
 Name: RootHide Patcher
-Version: 0.5
+Version: 0.6
 Architecture: iphoneos-arm64e
-Depends: firmware (>= 15.0), odcctools, ldid, file, dpkg, gawk, plutil(>= 0.2.2-1)
+Depends: firmware (>= 15.0), odcctools, ldid, file, dpkg, gawk, plutil(>= 0.2.2-1), rsync
 Description: patch rootless package to roothide, not work for all packages.
 Maintainer: RootHide
 Author: haxi0
